Add minimist@1.1.1 to dependencies

--- a/node/package.json
+++ b/node/package.json
@@ -9,5 +9,8 @@
   "maintainers": [
     "Jack Boberg <jack@modulus.io>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "minimist": "1.1.1"
+  }
 }
