--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "find-file-sync": "0.0.4",
     "minimist": "1.1.1",
     "winston": "0.9.0"
   }
