--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "concat-stream": "1.4.7",
     "find-file-sync": "0.0.4",
     "minimist": "1.1.1",
+    "semver": "4.3.1",
     "winston": "0.9.0"
   }
 }
