--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "concat-stream": "1.4.7",
     "find-file-sync": "0.0.4",
+    "get-stdin": "4.0.1",
     "minimist": "1.1.1",
     "semver": "4.3.1",
     "winston": "0.9.0"
