Fixed move command for build.
Now instead of moving files inside output, we just rename input to
output.  Much faster then copying.

Signed-off-by: Ken Herner <kherner@progress.com>

--- a/bin/build
+++ b/bin/build
@@ -9,10 +9,9 @@ if [[ ! $INPUT_DIR ]] || [[ ! $OUTPUT_DIR ]]; then
 fi
 
 mkdir -p $INPUT_DIR
-mkdir -p $OUTPUT_DIR
 
-if [[ ! -d $INPUT_DIR ]] || [[ ! -d $OUTPUT_DIR ]]; then
-  echo "Input/Output directories must exist.\n"
+if [[ ! -d $INPUT_DIR ]]; then
+  echo "Input directory must exist.\n"
   exit 1
 fi
 
@@ -69,7 +68,10 @@ fi
 
 cd $CURRENT_DIR
 # Move all the files in Input Dir to Outpup Dir.  Include dot files
-mv $INPUT_DIR/{*,.*} $OUTPUT_DIR > /dev/null 2>&1
+if [ -d $OUTPUT_DIR ]; then
+  rm -rf $OUTPUT_DIR
+fi
+mv $INPUT_DIR $OUTPUT_DIR
 
 MOD_DIR=$OUTPUT_DIR/.modulus
 mkdir -p $MOD_DIR
